package CommandPattern.PultExample;

/**
 * GarageDoor  v.1.0  07.02.16
 * Copyright (c) 2016 Vladislav Laptev,
 * All rights reserved. Used by permission,
 * e-mail: vlad@allfound.ru
 */
public class GarageDoor {
    public void on() {
        System.out.println("Garage Door Open");
    }

    public void off() {
        System.out.println("Garage Door Close");
    }
}
