package CommandPattern.PultExample;

/**
 * NoCommand  v.1.0  07.02.16
 * Copyright (c) 2016 Vladislav Laptev,
 * All rights reserved. Used by permission,
 * e-mail: vlad@allfound.ru
 */
public class NoCommand implements Command {
    public void execute() {}
}
